@@ -387,12 +387,12 @@ and run on that version of Linux.</p>
 </PRE>
 </blockquote>
 
-<p>For Oracle 11g or later, use the following script, replacing /u01/app/oracle/product/11.1.0 with your $ORACLE_HOME</p>
+<p>For Oracle 11g or later, use the following script, replacing /u01/app/oracle/product/11.2.0 with your $ORACLE_HOME</p>
 
 <blockquote>
 <font color="#0000ff">#!/bin/sh</font><br>
 <br>
-<font color="#008b8b">ORACLE_HOME</font>=/u01/app/oracle/product/<font color="#ff00ff">11</font>.<font color="#ff00ff">1</font>.<font color="#ff00ff">0</font><br>
+<font color="#008b8b">ORACLE_HOME</font>=/u01/app/oracle/product/<font color="#ff00ff">11</font>.<font color="#ff00ff">2</font>.<font color="#ff00ff">0</font><br>
 <br>
 <font color="#a52a2a"><b>case</b></font>&nbsp;<font color="#a52a2a"><b>&quot;</b></font><font color="#a020f0">$1</font><font color="#a52a2a"><b>&quot;</b></font>&nbsp;<font color="#a52a2a"><b>in</b></font><br>
 &nbsp;&nbsp;start<font color="#a52a2a"><b>)</b></font><br>
@@ -709,7 +709,7 @@ JServer Release <FONT color=#ff00ff>8.1</FONT>.<FONT color=#ff00ff>7.0</FONT>.<F
 <i>sqlrelay.conf</i> file for the database that you want 
 to access.  Here is an example <i>sqlrelay.conf</i> which defines an SQL Relay 
 instance called oracletest.  This instance connects to the <i>ora1</i> 
-database as the user <i>testuser</i> with password <i>testpassword</i>.</p>
+database as the user <i>testuser</i> with password <i>testpassword</i>.  The <i>ora1</i> parameter refers to an entry in the tnsnames.ora file which would be found in the network/admin subdirectory of the directory specified in the <i>oracle_home</i> parameter.</p>
 
 <PRE>
 <FONT color=#0000ff>&lt;?</FONT><B><FONT color=#288a51>xml version=</FONT></B><FONT color=#ff00ff>&quot;1.0&quot;</FONT><FONT color=#0000ff>?&gt;</FONT>
@@ -721,7 +721,26 @@ database as the user <i>testuser</i> with password <i>testpassword</i>.</p>
                         <FONT color=#008a8e>&lt;user user=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> password=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e>/&gt;</FONT>
                 <FONT color=#008a8e>&lt;/users&gt;</FONT>
                 <FONT color=#008a8e>&lt;connections&gt;</FONT>
-                        <FONT color=#008a8e>&lt;connection connectionid=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> string=</FONT><FONT color=#ff00ff>&quot;user=testuser;password=testpassword;oracle_sid=ora1&quot;</FONT><FONT color=#008a8e> metric=</FONT><FONT color=#ff00ff>&quot;1&quot;</FONT><FONT color=#008a8e>/&gt;</FONT>
+                        <FONT color=#008a8e>&lt;connection connectionid=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> string=</FONT><FONT color=#ff00ff>&quot;user=testuser;password=testpassword;oracle_home=/u01/app/oracle/product/11.2.0;oracle_sid=ora1&quot;</FONT><FONT color=#008a8e> metric=</FONT><FONT color=#ff00ff>&quot;1&quot;</FONT><FONT color=#008a8e>/&gt;</FONT>
+                <FONT color=#008a8e>&lt;/connections&gt;</FONT>
+        <FONT color=#008a8e>&lt;/instance&gt;</FONT>
+
+<FONT color=#008a8e>&lt;/instances&gt;</FONT>
+</PRE>
+
+<p>Alternatively, if you don't have a tnsnames.ora file on the machine you want to run SQL Relay on, or don't want to create one, you can specify the oracle_sid as if it were a line from the tnsnames.ora file, as follows:</p>
+
+<PRE>
+<FONT color=#0000ff>&lt;?</FONT><B><FONT color=#288a51>xml version=</FONT></B><FONT color=#ff00ff>&quot;1.0&quot;</FONT><FONT color=#0000ff>?&gt;</FONT>
+<FONT color=#008a8e>&lt;!</FONT><B><FONT color=#a62828>DOCTYPE</FONT></B> instances <B><FONT color=#a62828>SYSTEM</FONT></B> <FONT color=#ff00ff>&quot;sqlrelay.dtd&quot;</FONT><FONT color=#008a8e>&gt;</FONT>
+<FONT color=#008a8e>&lt;instances&gt;</FONT>
+
+        <FONT color=#008a8e>&lt;instance id=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> port=</FONT><FONT color=#ff00ff>&quot;9000&quot;</FONT><FONT color=#008a8e> socket=</FONT><FONT color=#ff00ff>&quot;/tmp/oracletest.socket&quot;</FONT><FONT color=#008a8e> dbase=</FONT><FONT color=#ff00ff>&quot;oracle8&quot;</FONT><FONT color=#008a8e> connections=</FONT><FONT color=#ff00ff>&quot;3&quot;</FONT><FONT color=#008a8e> maxconnections=</FONT><FONT color=#ff00ff>&quot;5&quot;</FONT><FONT color=#008a8e> maxqueuelength=</FONT><FONT color=#ff00ff>&quot;0&quot;</FONT><FONT color=#008a8e> growby=</FONT><FONT color=#ff00ff>&quot;1&quot;</FONT><FONT color=#008a8e> ttl=</FONT><FONT color=#ff00ff>&quot;60&quot;</FONT><FONT color=#008a8e> endofsession=</FONT><FONT color=#ff00ff>&quot;commit&quot;</FONT><FONT color=#008a8e> sessiontimeout=</FONT><FONT color=#ff00ff>&quot;600&quot;</FONT><FONT color=#008a8e> runasuser=</FONT><FONT color=#ff00ff>&quot;nobody&quot;</FONT><FONT color=#008a8e> runasgroup=</FONT><FONT color=#ff00ff>&quot;nobody&quot;</FONT><FONT color=#008a8e> cursors=</FONT><FONT color=#ff00ff>&quot;5&quot;</FONT><FONT color=#008a8e> authtier=</FONT><FONT color=#ff00ff>&quot;listener&quot;</FONT><FONT color=#008a8e> handoff=</FONT><FONT color=#ff00ff>&quot;pass&quot;</FONT><FONT color=#008a8e>&gt;</FONT>
+                <FONT color=#008a8e>&lt;users&gt;</FONT>
+                        <FONT color=#008a8e>&lt;user user=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> password=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e>/&gt;</FONT>
+                <FONT color=#008a8e>&lt;/users&gt;</FONT>
+                <FONT color=#008a8e>&lt;connections&gt;</FONT>
+                        <FONT color=#008a8e>&lt;connection connectionid=</FONT><FONT color=#ff00ff>&quot;oracletest&quot;</FONT><FONT color=#008a8e> string=</FONT><FONT color=#ff00ff>&quot;user=testuser;password=testpassword;oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = localhost)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1.localdomain)))&quot;</FONT><FONT color=#008a8e> metric=</FONT><FONT color=#ff00ff>&quot;1&quot;</FONT><FONT color=#008a8e>/&gt;</FONT>
                 <FONT color=#008a8e>&lt;/connections&gt;</FONT>
         <FONT color=#008a8e>&lt;/instance&gt;</FONT>
 
