@@ -83,7 +83,8 @@ int	main(int argc, char **argv) {
 	uint32_t	*fieldlens;
 
 	// instantiation
-	con=new sqlrconnection("db.firstworks.com",9000,NULL,"test","test",0,1);
+	con=new sqlrconnection("localhost",9000,"/tmp/test.socket",
+							"test","test",0,1);
 	cur=new sqlrcursor(con);
 
 	// get database type
