@@ -84,14 +84,9 @@ int	main(int argc, char **argv) {
 	char		*filename;
 	uint32_t	*fieldlens;
 
-	// usage...
-	if (argc<5) {
-		printf("usage: firebird host port socket user password\n");
-		exit(0);
-	}
-
 	// instantiation
-	con=new sqlrconnection("db.firstworks.com",9000,NULL,"test","test",0,1);
+	con=new sqlrconnection("localhost",9000,"/tmp/test.socket",
+							"test","test",0,1);
 	cur=new sqlrcursor(con);
 
 	// get database type
@@ -731,8 +726,8 @@ int	main(int argc, char **argv) {
 	printf("\n");
 
 	printf("COMMIT AND ROLLBACK: \n");
-	secondcon=new sqlrconnection("db.firstworks.com",9000,
-						NULL,"test","test",0,1);
+	secondcon=new sqlrconnection("localhost",9000,"/tmp/test.socket",
+							"test","test",0,1);
 	secondcur=new sqlrcursor(secondcon);
 	checkSuccess(secondcur->sendQuery("select count(*) from testtable"),1);
 	checkSuccess(con->commit(),1);
