@@ -62,8 +62,8 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection connectionid="db" string="user=testuser;password=testpassword;oracle_home=/u01/app/oracle/product/11.2.0;oracle_sid=ora1" metric="6"/>
-                        <!--<connection connectionid="db" string="user=testuser;password=testpassword;oracle_home=/u01/app/oracle/product/11.2.0;oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = db.firstworks.com)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)))" metric="6"/>-->
+			<!--<connection connectionid="db" string="user=testuser;password=testpassword;oracle_home=/u01/app/oracle/product/11.2.0;oracle_sid=ora1" metric="6"/>-->
+                        <connection connectionid="db" string="user=testuser;password=testpassword;oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = db.firstworks.com)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1.firstworks.com)))" metric="6"/>
 		</connections>
 	</instance>
 
